mobile menu overlaped to modal, sort by spaces fixed

--- a/_sass/pages/_filter-form.scss
+++ b/_sass/pages/_filter-form.scss
@@ -501,6 +501,7 @@
   }
 
   .mobile-search-modal {
+    z-index: 9999    ;
     .modal-header {
       button {
         font-size: 12px;
